# core

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/examples/: basic_chunks.rs  custom_embedder.rs  pii_scrub.rs
crates/core/src/: arrow_io.rs  chunk.rs  embed.rs  error.rs  lib.rs  parse.rs  pipeline.rs  schema.rs  scrub.rs  tokenize.rs
crates/core/src/arrow_io/: batch.rs  csv.rs  ffi.rs  ipc.rs
crates/core/src/parse/: html.rs  json.rs  markdown.rs  pdf.rs  text.rs
crates/wasm/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
crates/wasm/src/: lib.rs
