[package]
name = "bitvanes-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme.workspace = true
description = "Zero-trust ETL engine: parse, scrub, tokenize, chunk, and emit Apache Arrow columnar memory."

[lib]
crate-type = ["rlib"]

# ---------------------------------------------------------------------------
# Feature flags. See the phased build plan for the rationale behind each.
# ---------------------------------------------------------------------------
[features]
default = ["embed-vocab"]

# Embed BPE vocab files (cl100k_base, o200k_base) at build time via
# `include_bytes!`. Ensures zero network calls and true zero-telemetry.
# Costs ~600KB gzipped in the final wasm binary.
embed-vocab = []

# Enable parallel processing via rayon. Native targets ONLY. Enabling this on
# `wasm32-unknown-unknown` will fail to compile.
parallel = []

# Native-only PDF parsing (via pdf-extract) for CLI parity with the PDF.js
# web path. Has no effect (and adds no deps) when building for wasm.
cli-pdf = []

# Arrow IPC stream output (StreamWriter). Native-only — the wasm target
# uses zero-copy FFI pointers, not IPC. Enable for the CLI.
ipc = ["arrow/ipc"]

# Arrow CSV output. Native-only. Enable for the CLI's `--format csv` flag.
csv = ["arrow/csv"]

# On-device embedding generation via ONNX Runtime (ort). Native-only — the
# wasm target delegates embeddings to JavaScript (@xenova/transformers).
# Adds ort + tokenizers + ndarray dependencies.
embeddings = ["dep:ort", "dep:tokenizers", "dep:ndarray"]

[lints]
workspace = true

[dependencies]
arrow = { version = "59.0.0", default-features = false, features = ["ffi"] }
ndarray = { version = "0.17", optional = true }
ort = { version = "2.0.0-rc.12", optional = true }
pulldown-cmark = "0.13.4"
regex = "1.12"
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2"
tiktoken-rs = { version = "0.12.0", default-features = false }
tokenizers = { version = "0.23", default-features = false, features = ["fancy-regex"], optional = true }

[dev-dependencies]
serde_json = "1.0.150"
