[package]
name = "bitvanes-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
description = "Thin wasm-bindgen wrapper exposing bitvanes-core to JavaScript via zero-copy Arrow FFI."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitvanes-core = { path = "../core", version = "0.2.0" }
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2"

[lints]
workspace = true
